--- a/app/src/engineering/res/layout/activity_view_gallery.xml
+++ b/app/src/engineering/res/layout/activity_view_gallery.xml
@@ -142,7 +142,7 @@
     </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/hedvigToolbar"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:navigationIcon="@drawable/ic_back"
