--- a/app/src/main/res/layout/activity_charity.xml
+++ b/app/src/main/res/layout/activity_charity.xml
@@ -9,7 +9,7 @@
     tools:context="com.hedvig.app.feature.profile.ui.charity.CharityActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/hedvigToolbar"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:colorBackground" />
