--- a/app/src/main/res/layout/activity_contract_coverage_detail.xml
+++ b/app/src/main/res/layout/activity_contract_coverage_detail.xml
@@ -93,7 +93,7 @@
 
     <androidx.appcompat.widget.Toolbar
         app:navigationIcon="@drawable/ic_close"
-        android:id="@+id/hedvigToolbar"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:colorBackground"
