--- a/app/src/main/res/layout/activity_emergency.xml
+++ b/app/src/main/res/layout/activity_emergency.xml
@@ -24,16 +24,9 @@
             android:clipToPadding="false"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/emergencyTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/base_margin_double"
-                android:layout_marginEnd="@dimen/base_margin_double"
-                android:textAppearance="?textAppearanceHeadline5"
-                tools:text="@string/CONTRACT_COVERAGE_CONTRACT_TYPE" />
-
-            <include layout="@layout/common_claim_first_message" />
+            <include
+                android:id="@+id/firstMessage"
+                layout="@layout/common_claim_first_message" />
 
             <com.hedvig.app.ui.view.HedvigCardView
                 android:layout_width="match_parent"
