--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,7 @@
     tools:context=".feature.settings.SettingsActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/hedvigToolbar"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:navigationIcon="@drawable/ic_back"
