--- a/app/src/main/res/drawable/ic_forward.xml
+++ b/app/src/main/res/drawable/ic_forward.xml
@@ -1,3 +1,3 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="16dp" android:height="16dp" android:viewportWidth="16" android:viewportHeight="16">
-    <path android:pathData="M8.225 3.109l0.884-0.884L14.884 8l-5.775 5.775-0.884-0.884 4.266-4.266H2v-1.25h10.491L8.225 3.109z" android:fillAlpha="67" android:fillColor="?colorPrimary"/>
+    <path android:pathData="M8.225 3.109l0.884-0.884L14.884 8l-5.775 5.775-0.884-0.884 4.266-4.266H2v-1.25h10.491L8.225 3.109z" android:fillAlpha="67" android:fillColor="@color/black"/>
 </vector>
