--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -43,6 +43,11 @@
         <item name="colorSurface">@color/colorInfoCardSurface</item>
     </style>
 
+    <style name="ThemeOverlay.Hedvig.PSA" parent="">
+        <item name="android:textColorPrimary">@color/color_black_67</item>
+        <item name="colorPrimary">@color/black</item>
+    </style>
+
     <style name="ThemeOverlay.Hedvig.WarningCard" parent="">
         <item name="colorSurface">?colorWarning</item>
         <item name="colorPrimary">@color/hedvig_black</item>
