--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -46,6 +46,7 @@
     <style name="ThemeOverlay.Hedvig.PSA" parent="">
         <item name="android:textColorPrimary">@color/color_hedvig_black_67</item>
         <item name="colorPrimary">@color/hedvig_black</item>
+        <item name="android:colorBackground">?colorWarning</item>
     </style>
 
     <style name="ThemeOverlay.Hedvig.WarningCard" parent="">
