Fix some minor issues

--- a/app/src/main/res/layout/activity_embark.xml
+++ b/app/src/main/res/layout/activity_embark.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/loading_spinner" />
+    <include android:id="@+id/loadingSpinner" layout="@layout/loading_spinner" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/passageContainer"
