--- a/app/src/main/res/layout/fragment_market_picker.xml
+++ b/app/src/main/res/layout/fragment_market_picker.xml
@@ -1,4 +1,4 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,10 +11,11 @@
         android:id="@+id/picker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:reverseLayout="true"
         tools:itemCount="2"
         tools:listitem="@layout/picker_layout" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
