--- a/app/src/main/res/layout/market_picker_bottom_sheet.xml
+++ b/app/src/main/res/layout/market_picker_bottom_sheet.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin_triple"
         android:text="@string/market_picker_modal.title"
-        android:textAppearance="@style/Hedvig.TextAppearance.Headline5" />
+        android:textAppearance="?textAppearanceHeadline5" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
