--- a/app/src/main/res/layout/picker_item_layout.xml
+++ b/app/src/main/res/layout/picker_item_layout.xml
@@ -15,7 +15,7 @@
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/Hedvig.TextAppearance.Body1"
+        android:textAppearance="?textAppearanceBody1"
         tools:text="Sweden" />
 
 </LinearLayout>
