--- a/app/src/main/res/layout/picker_layout.xml
+++ b/app/src/main/res/layout/picker_layout.xml
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
-        android:textAppearance="@style/Hedvig.TextAppearance.Caption"
+        android:textAppearance="?textAppearanceCaption"
         app:layout_constraintStart_toEndOf="@id/flag"
         app:layout_constraintTop_toBottomOf="@id/header"
         tools:text="Sweden" />
