--- a/app/src/main/res/layout/language_picker_bottom_sheet.xml
+++ b/app/src/main/res/layout/language_picker_bottom_sheet.xml
@@ -22,8 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin_triple"
-        android:textAppearance="?textAppearanceHeadline5"
-        tools:text="Header" />
+        android:text="@string/language_picker_modal.title"
+        android:textAppearance="?textAppearanceHeadline5" />
 
     <TextView
         android:layout_width="match_parent"
