--- a/app/src/main/res/layout/fragment_market_picker.xml
+++ b/app/src/main/res/layout/fragment_market_picker.xml
@@ -10,22 +10,18 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginBottom="@dimen/base_margin_septuple"
         android:text="@string/market_language_screen.title"
         android:textAlignment="center"
-        android:textAppearance="?textAppearanceHeadline4"
-        app:layout_constraintBottom_toTopOf="@+id/picker"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_gravity="center"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textAppearance="?textAppearanceHeadline4" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/picker"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="bottom"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:reverseLayout="true"
         tools:itemCount="2"
         tools:listitem="@layout/picker_layout" />
