--- a/app/src/main/res/layout/market_picker_bottom_sheet.xml
+++ b/app/src/main/res/layout/market_picker_bottom_sheet.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingStart="@dimen/base_margin_triple"
     android:paddingTop="@dimen/base_margin"
-    android:paddingEnd="@dimen/base_margin_triple"
     android:paddingBottom="@dimen/base_margin_triple">
 
     <ImageView
@@ -17,18 +15,14 @@
         android:contentDescription="@null"
         android:src="@drawable/bottom_sheet_handle" />
 
-    <TextView
-        android:id="@+id/header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin_triple"
-        android:text="@string/market_picker_modal.title"
-        android:textAppearance="?textAppearanceHeadline5" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:clipToPadding="false"
+        android:layout_weight="1"
+        android:paddingStart="@dimen/base_margin_triple"
+        android:paddingEnd="@dimen/base_margin_triple"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="3"
         tools:listitem="@layout/picker_item_layout" />
