--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <style name="Hedvig.Theme" parent="Hedvig.Theme.V23" />
 
     <style name="Hedvig.Theme.Marketing.V23" parent="Hedvig.Theme">
-        <item name="android:navigationBarColor">@color/translucent_dark_mode</item>
+        <item name="android:navigationBarColor">@color/transparent</item>
     </style>
 
     <style name="Hedvig.Theme.Marketing" parent="Hedvig.Theme.Marketing.V23"/>
