--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -13,6 +13,7 @@
         <item name="bottomSheetStyle">@style/Hedvig.Theme.BottomSheet</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">?colorSurface</item>
+        <item name="android:windowLightStatusBar">false</item>
         <item name="android:windowIsFloating">false</item>
         <item name="materialButtonStyle">@style/Hedvig.Button</item>
     </style>
