--- a/app/src/main/res/layout/connect_payment_explainer_fragment.xml
+++ b/app/src/main/res/layout/connect_payment_explainer_fragment.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/explainerIllustration"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
         android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginEnd="@dimen/base_margin_double"
         android:adjustViewBounds="true"
         android:contentDescription="@null"
-        app:layout_constraintBottom_toTopOf="@id/explainerPreHeadline"
+        app:layout_constraintBottom_toTopOf="@id/explainerTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,37 +20,25 @@
         app:srcCompat="@drawable/illustration_connect_payment" />
 
     <TextView
-        android:id="@+id/explainerPreHeadline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/trustly_explainer_illustration_offset"
-        android:text="@string/ONBOARDING_CONNECT_DD_PRE_HEADLINE"
-        android:textAppearance="?textAppearanceHeadline5"
-        android:textColor="?textColorLink"
-        app:layout_constraintBottom_toTopOf="@id/explainerTitle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/explainerIllustration" />
-
-    <TextView
         android:id="@+id/explainerTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/base_margin_octuple"
         android:text="@string/ONBOARDING_CONNECT_DD_HEADLINE"
         android:textAppearance="?textAppearanceHeadline5"
         app:layout_constraintBottom_toTopOf="@id/explainerParagraph"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/explainerPreHeadline" />
+        app:layout_constraintTop_toBottomOf="@id/explainerIllustration" />
 
     <TextView
         android:id="@+id/explainerParagraph"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin_triple"
-        android:gravity="center"
-        android:paddingStart="@dimen/base_margin_double"
-        android:paddingEnd="@dimen/base_margin_double"
+        android:layout_marginTop="@dimen/base_margin_double"
+        android:textAlignment="center"
+        android:layout_marginStart="@dimen/base_margin_triple"
+        android:layout_marginEnd="@dimen/base_margin_triple"
         android:text="@string/ONBOARDING_CONNECT_DD_BODY"
         android:textAppearance="?textAppearanceBody1"
         app:layout_constraintBottom_toTopOf="@id/explainerButton"
@@ -61,16 +49,15 @@
     <Button
         android:id="@+id/explainerButton"
         style="?materialButtonContainedLargeStyle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
-        android:layout_marginTop="@dimen/base_margin_quintuple"
         android:layout_marginEnd="@dimen/base_margin_double"
+        android:layout_marginBottom="@dimen/base_margin_double"
         android:enabled="false"
         android:text="@string/ONBOARDING_CONNECT_DD_CTA"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/explainerParagraph" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
