--- a/app/src/main/res/layout/trustly_connect_fragment.xml
+++ b/app/src/main/res/layout/trustly_connect_fragment.xml
@@ -1,12 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <!-- TODO: Toolbar -->
+    <com.google.android.material.appbar.MaterialToolbar
+        android:layout_width="match_parent"
+        android:id="@+id/toolbar"
+        app:title="@string/PROFILE_PAYMENT_CONNECT_DIRECT_DEBIT_TITLE"
+        tools:navigationIcon="@drawable/ic_close"
+        tools:menu="@menu/connect_payin"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/loadingContainer"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_weight="1">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="Loading..."
+            android:layout_marginTop="@dimen/base_margin_triple"
+            android:layout_marginStart="@dimen/base_margin_triple"
+            android:layout_marginEnd="@dimen/base_margin_triple"
+            android:textAppearance="?textAppearanceHeadline6"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
     <com.hedvig.app.ui.view.SafeWebView
         android:layout_width="match_parent"
         android:id="@+id/trustly"
-        android:layout_height="match_parent" />
+        android:layout_weight="1"
+        android:visibility="gone"
+        android:layout_height="0dp" />
 
-</FrameLayout>
+</LinearLayout>
