--- a/app/src/main/res/layout/connect_payment_result_fragment.xml
+++ b/app/src/main/res/layout/connect_payment_result_fragment.xml
@@ -3,20 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    tools:context=".feature.connectpayin.ConnectPaymentResultFragment"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    tools:context=".feature.connectpayin.ConnectPaymentResultFragment">
 
     <ImageView
         android:id="@+id/icon"
         android:layout_width="@dimen/connect_payment_result_icon_size"
         android:layout_height="@dimen/connect_payment_result_icon_size"
+        android:layout_marginBottom="@dimen/base_margin_quintuple"
         android:contentDescription="@null"
         app:layout_constraintBottom_toTopOf="@id/title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
         tools:src="@drawable/ic_checkmark_in_circle" />
 
     <TextView
@@ -24,15 +22,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin_triple"
-        android:textAlignment="center"
         android:paddingStart="@dimen/base_margin_double"
         android:paddingEnd="@dimen/base_margin_double"
+        android:textAlignment="center"
         android:textAppearance="?textAppearanceHeadline5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/icon"
-        tools:text="@string/PROFILE_TRUSTLY_SUCCESS_TITLE" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/pay_in_confirmation.headline" />
+
+    <TextView
+        android:id="@+id/body"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/base_margin_triple"
+        android:layout_marginTop="@dimen/base_margin_triple"
+        android:layout_marginEnd="@dimen/base_margin_triple"
+        android:text="@string/pay_in_error.body"
+        android:textAlignment="center"
+        android:textAppearance="?textAppearanceBody2"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/close"
@@ -42,20 +56,20 @@
         android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginEnd="@dimen/base_margin_double"
         android:layout_marginBottom="@dimen/base_margin_double"
-        android:text="@string/PROFILE_TRUSTLY_CLOSE"
         app:layout_constraintBottom_toTopOf="@id/doItLater"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="@string/pay_in_confirmation.continue_button" />
 
     <Button
         android:id="@+id/doItLater"
         style="?materialButtonOutlinedLargeStyle"
-        android:layout_marginStart="@dimen/base_margin_triple"
-        android:layout_marginEnd="@dimen/base_margin_triple"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/base_margin_triple"
+        android:layout_marginEnd="@dimen/base_margin_triple"
         android:layout_marginBottom="@dimen/base_margin_quintuple"
-        android:text="@string/ONBOARDING_CONNECT_DD_FAILURE_CTA_LATER"
+        android:text="@string/pay_in_error.postpone_button"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
