--- a/app/src/main/res/menu/connect_payin.xml
+++ b/app/src/main/res/menu/connect_payin.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/skip"
-        android:title="@string/TRUSTLY_SKIP_BUTTON"
+        android:title="@string/pay_in_iframe_post_sign.skip_button"
         app:showAsAction="always|withText" />
 </menu>
