--- a/app/src/main/res/layout/connect_payment_result_fragment.xml
+++ b/app/src/main/res/layout/connect_payment_result_fragment.xml
@@ -39,13 +39,13 @@
         android:layout_marginStart="@dimen/base_margin_triple"
         android:layout_marginTop="@dimen/base_margin_triple"
         android:layout_marginEnd="@dimen/base_margin_triple"
-        android:text="@string/pay_in_error.body"
         android:textAlignment="center"
         android:textAppearance="?textAppearanceBody2"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"
+        tools:text="@string/pay_in_error.body"
         tools:visibility="visible" />
 
     <Button
