HVG-187 Edge-to-edgeify mock activies

--- a/app/src/engineering/res/layout/activity_generic_development.xml
+++ b/app/src/engineering/res/layout/activity_generic_development.xml
@@ -7,4 +7,5 @@
     android:layout_height="match_parent"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:itemCount="3"
+    android:clipToPadding="false"
     tools:listitem="@layout/development_row" />
