--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="dark_green">#009175</color>
     <color name="pink">#FF8A80</color>
     <color name="maroon">#AA0045</color>
-    <color name="yellow">#FFCC4D</color>
+    <color name="yellow">#F2C852</color>
     <color name="referral_tank_lines">#9A6BFF</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="coral_500">#ff8a80</color>
