--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -130,5 +130,8 @@
     <dimen name="numbered_bullet_background_sphere_size">32sp</dimen>
     <dimen name="home_error_icon_size">32dp</dimen>
     <dimen name="dismissible_page_illustration_size">200dp</dimen>
+    <dimen name="pill_corner_radius">4dp</dimen>
+    <dimen name="pill_padding_vertical">4dp</dimen>
+    <dimen name="pill_padding_horizontal">6dp</dimen>
 
 </resources>
